añadi primera version de diccionario de datos

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ _minted/EEE41B011A6AC64FA5234238DF3FB969.highlight.minted
 chapters/01-Introduccion.aux
 chapters/02-EstadoDelArte.aux
 chapters/03-MarcoTeorico.aux
+chapters/04-Planeacion.aux
+chapters/05-Analisis.aux
 chapters/chapter01.aux
 chapters/chapter02.aux
 main.run.xml
