Diagramas del flujo de procesos añadidos, al igual que modificación de estos

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,15 @@ chapters/02-EstadoDelArte.aux
 chapters/03-MarcoTeorico.aux
 chapters/chapter01.aux
 chapters/chapter02.aux
+chapters/chapter03.aux
+chapters/chapter04.aux
+chapters/chapter05.aux
 main.run.xml
 main.toc
+chapters/04-Planeacion.aux
+chapters/05-Analisis.aux
+chapters/04-Planeacion.aux
+chapters/04-Planeacion.aux
+chapters/04-Planeacion.aux
+chapters/04-Planeacion.aux
+img/Analisis/DiagramaProcesos/.$DiagramaProceso01_Captura Parámetros.drawio.bkp
