Mejoras de redacción

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ chapters/04-Planeacion.aux
 chapters/04-Planeacion.aux
 chapters/04-Planeacion.aux
 img/Analisis/DiagramaProcesos/.$DiagramaProceso01_Captura Parámetros.drawio.bkp
+chapters/06-Design.aux
